test/compile-fail/array-index-immutable.as
let arr = [1, 2];
arr[1] = 50; // error
[1, 5][0] = 30; // error
